Level editor created, but not finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity android:name=".GameActivity"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".HowToPlayActivity"
+        <activity android:name=".LevelEditorActivity"
             android:screenOrientation="portrait"/>
 
         <activity android:name=".SettingsActivity"
