Level editor  finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".LevelEditorActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
 
         <activity android:name=".SettingsActivity"
             android:screenOrientation="portrait"/>
