--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:value="5677c33efd5093043f8c64254464d1abf7a13490" />
 
         <activity android:name=".LevelsListActivity" />
-        <activity android:name=".ContactsActivity"></activity>
+        <activity android:name=".ContactsActivity" />
+        <activity android:name=".SaveLevelActivity"></activity>
     </application>
 
 </manifest>
